fix: 증정 메뉴가 없을 시 "없음" 문자열을 출력하지 않는 오류 수정